user create vs options works correctly

--- a/src/main/webapp/WEB-INF/views/admin/start.html
+++ b/src/main/webapp/WEB-INF/views/admin/start.html
@@ -34,9 +34,7 @@
         </div>
         </tbody>
     </table>
-
-    <h3><a href="/admin/add">Add new User</a></h3>
-    <h3><a href="/admin/new">Add new User with options</a></h3>
+    <h3><a href="/admin/new">Add new User</a></h3>
     <h3><a href="/admin/search">Search an User</a></h3>
 </div>
 </body>
